--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+      font-family: 'Assistant', sans-serif;
+  }
+  
+  ul {
+      list-style-type: none;
+  }
+  
+  a {
+      text-decoration: none;
+  }
+  
